--- a/FastFoodApp/html/menu.html
+++ b/FastFoodApp/html/menu.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
-	<link rel="stylesheet" type="text/css" href="estilos/estilosMenu.css">
+	<link rel="stylesheet" type="text/css" href="../estilos/estilosMenu.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
 
 <body>
 	<header>
-		<img class="logo" src="img/logo2.png" alt="logo">
+		<img class="logo" src="../img/logo2.png" alt="logo">
 		<div class="redes-encabezado">
 			<ul>
 				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -74,7 +74,7 @@
 		</div>
 		<nav>
 			<ul class="menu_list" id="menu_list">
-				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
+				<li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
 				<li class="list_item"><a href="menu.html" class="link">Menú</a></li>
 				<li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
 				<li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
@@ -97,82 +97,82 @@
 			</ul>
 			<div class="lista-platos">
 				<div class="item" data-categoria="Desayunos" data-descripcion="Crujiente de avena con pomelo, yogur natural y semillas">
-					<img src="img/platos/desayunos/desayuno1.jpg" alt="desayuno1">
+					<img src="../img/platos/desayunos/desayuno1.jpg" alt="desayuno1">
 					<a href="#">Crujiente acompañado con pomelo y yogur en vasito</a>
 					<a href="#">$6.50</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
-					<img src="img/platos/desayunos/desayuno2.jpg" alt="desayuno2">
+					<img src="../img/platos/desayunos/desayuno2.jpg" alt="desayuno2">
 					<a href="#">Pudding de chía, café y chocolate</a>
 					<a href="#">$7.80</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
-					<img src="img/platos/desayunos/desayuno3.jpg" alt="desayuno3">
+					<img src="../img/platos/desayunos/desayuno3.jpg" alt="desayuno3">
 					<a href="#">Sándwich de pollo asado con tomates y canónigos</a>
 					<a href="#">$9.90</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
-					<img src="img/platos/desayunos/desayuno4.jpg" alt="desayuno4">
+					<img src="../img/platos/desayunos/desayuno4.jpg" alt="desayuno4">
 					<a href="#">Tostadas de aguacate, bacalao y espárragos</a>
 					<a href="#">$5.50</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
-					<img src="img/platos/almuerzos/almuerzo1.jpg" alt="almuerzo1">
+					<img src="../img/platos/almuerzos/almuerzo1.jpg" alt="almuerzo1">
 					<a href="#">Ensalada de pollo con cuscús</a>
 					<a href="#">$18.45</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
-					<img src="img/platos/almuerzos/almuerzo2.jpg" alt="almuerzo2">
+					<img src="../img/platos/almuerzos/almuerzo2.jpg" alt="almuerzo2">
 					<a href="#">Pechugas de pollo a la plancha</a>
 					<a href="#">$16.80</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
-					<img src="img/platos/almuerzos/almuerzo3.jpg" alt="almuerzo3">
+					<img src="../img/platos/almuerzos/almuerzo3.jpg" alt="almuerzo3">
 					<a href="#">Burritos gluten free con pechuga de pollo</a>
 					<a href="#">$14.90</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
-					<img src="img/platos/almuerzos/almuerzo4.jpg" alt="almuerzo4">
+					<img src="../img/platos/almuerzos/almuerzo4.jpg" alt="almuerzo4">
 					<a href="#">Atún salteado con verduras y miel</a>
 					<a href="#">$19.99</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
-					<img src="img/platos/meriendas/merienda1.jpg" alt="merienda1">
+					<img src="../img/platos/meriendas/merienda1.jpg" alt="merienda1">
 					<a href="#">Crema fría de aguacate y limón</a>
 					<a href="#">$14.45</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
-					<img src="img/platos/meriendas/merienda2.jpg" alt="merienda2">
+					<img src="../img/platos/meriendas/merienda2.jpg" alt="merienda2">
 					<a href="#">Atún en salsa teriyaki y sésamo</a>
 					<a href="#">$18.80</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
-					<img src="img/platos/meriendas/merienda3.jpg" alt="merienda3">
+					<img src="../img/platos/meriendas/merienda3.jpg" alt="merienda3">
 					<a href="#">Crema fría de calabacín con aguacate</a>
 					<a href="#">$15.90</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
-					<img src="img/platos/meriendas/merienda4.jpg" alt="merienda4">
+					<img src="../img/platos/meriendas/merienda4.jpg" alt="merienda4">
 					<a href="#">Ensalada de atún baja en calorías</a>
 					<a href="#">$11.99</a>
 				</div>
 				<div class="item" data-categoria="Postres">
-					<img src="img/platos/postres/postre1.jpg" alt="postre1">
+					<img src="../img/platos/postres/postre1.jpg" alt="postre1">
 					<a href="#">Flan Vegano de vainilla y caramelo</a>
 					<a href="#">$4.45</a>
 				</div>
 				<div class="item" data-categoria="Postres">
-					<img src="img/platos/postres/postre2.jpg" alt="postre2">
+					<img src="../img/platos/postres/postre2.jpg" alt="postre2">
 					<a href="#">Cubitos de rompope y cajeta</a>
 					<a href="#">$3.80</a>
 				</div>
 				<div class="item" data-categoria="Postres">
-					<img src="img/platos/postres/postre3.jpg" alt="postre3">
+					<img src="../img/platos/postres/postre3.jpg" alt="postre3">
 					<a href="#">Crepa de queso cottage y pera</a>
 					<a href="#">$5.90</a>
 				</div>
 				<div class="item" data-categoria="Postres">
-					<img src="img/platos/postres/postre4.jpg" alt="postre4">
+					<img src="../img/platos/postres/postre4.jpg" alt="postre4">
 					<a href="#">Platanos con caramelo salado y granola</a>
 					<a href="#">$5.99</a>
 				</div>
@@ -203,8 +203,8 @@
         </div>
     </div>
 
-	<script src="js/filtro-platos.js"></script>
-	<script src="js/modal-plato.js"></script>
+	<script src="../js/filtro-platos.js"></script>
+	<script src="../js/modal-plato.js"></script>
 	<footer>
 		<div class="footer-content">
 			<h3>Síguenos en nuestras redes sociales</h3>
@@ -219,7 +219,7 @@
 			<p>copyright &copy;2021 La Parada. Inc</p>
 		</div>
 	</footer>
-	<script src="js/menu.js"></script>
+	<script src="../js/menu.js"></script>
 	<!--Script del menú de naveación para darle el efecto sticky
 	se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
 </body>
