--- a/FastFoodApp/html/trabajaConNosotros.html
+++ b/FastFoodApp/html/trabajaConNosotros.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Restaurante" />
     <meta name="keywords" content="El mejor restaurante del país" />
     <title>La Parada</title>
-    <link rel="stylesheet" type="text/css" href="estilos/estilosTrabajaConNosotros.css">
+    <link rel="stylesheet" type="text/css" href="../estilos/estilosTrabajaConNosotros.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img class="logo" src="img/logo2.png" alt="logo">
+        <img class="logo" src="../img/logo2.png" alt="logo">
         <div class="redes-encabezado">
             <ul>
                 <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -41,7 +41,7 @@
         </div>
         <nav>
             <ul class="menu_list" id="menu_list">
-                <li class="list_item"><a href="index.html" class="link">Inicio</a></li>
+                <li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
                 <li class="list_item"><a href="menu.html" class="link">Menú</a></li>
                 <li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
                 <li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
@@ -118,9 +118,9 @@
             <p>copyright &copy;2021 La Parada. Inc</p>
         </div>
     </footer>
-    <script src="js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
+    <script src="../js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
 	se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
-    <script src="js/validaciones/validacionessolicitudtrabajo.js"></script><!--Script encargado de realizar las
+    <script src="../js/validaciones/validacionessolicitudtrabajo.js"></script><!--Script encargado de realizar las
     validaciiones del formulario-->
 </body>
 
