--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -42,13 +42,13 @@
 		<nav>
 			<ul class="menu_list" id="menu_list">
 				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
-				<li class="list_item"><a href="menu.html" class="link">Menú</a></li>
-				<li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
-				<li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
-				<li class="list_item"><a href="ubicaciones.html" class="link">Ubicaciones</a></li>
-				<li class="list_item"><a href="quienesSomos.html" class="link">Quiénes Somos</a></li>
-				<li class="list_item"><a href="contactenos.html" class="link">Contáctenos</a></li>
-				<li class="list_item"><a href="trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
+				<li class="list_item"><a href="html/menu.html" class="link">Menú</a></li>
+				<li class="list_item"><a href="html/reservaciones.html" class="link">Reservaciones</a></li>
+				<li class="list_item"><a href="html/ofertas.html" class="link">Ofertas</a></li>
+				<li class="list_item"><a href="html/ubicaciones.html" class="link">Ubicaciones</a></li>
+				<li class="list_item"><a href="html/quienesSomos.html" class="link">Quiénes Somos</a></li>
+				<li class="list_item"><a href="html/contactenos.html" class="link">Contáctenos</a></li>
+				<li class="list_item"><a href="html/trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
 			</ul>
 		</nav>
 	</header>
