--- a/FastFoodApp/html/contactenos.html
+++ b/FastFoodApp/html/contactenos.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
-	<link rel="stylesheet" type="text/css" href="estilos/estilosUbicaciones.css">
+	<link rel="stylesheet" type="text/css" href="../estilos/estilosContactenos.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
 	<header>
-		<img class="logo" src="img/logo2.png" alt="logo">
+		<img class="logo" src="../img/logo2.png" alt="logo">
 		<div class="redes-encabezado">
 			<ul>
 				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -41,7 +41,7 @@
 		</div>
 		<nav>
 			<ul class="menu_list" id="menu_list">
-				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
+				<li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
 				<li class="list_item"><a href="menu.html" class="link">Menú</a></li>
 				<li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
 				<li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
@@ -52,20 +52,52 @@
 			</ul>
 		</nav>
 	</header>
-	<h1>Ubicaciones</h1>
-	<section class="contenedor_ubicaciones">
-		<div class="texto_ubicaciones">
-			<h2 class="titulo_ubicaciones">La Parada Puerto Santa Ana</h2>
-			<p>Restaurante 9, edificio Riverfront II local 5 y 9</p>
-			<h2 class="titulo_ubicaciones">La Parada Guayarte</h2>
-			<p>Restaurante Plaza Guayarte, Av Carlos Julio Arosemena</p>
-			<h2 class="titulo_ubicaciones">La Parada Samborondón</h2>
-			<p>Av Samborondón</p>
+	<div class="titulo">
+		<h1>Contáctenos</h1>
+	</div>
+	<div id="contenedorPrincipal">
+		<div class="contenedor-formularios">
+			<form id="formContactenos" onsubmit="return validar()">
+				<div class="elemento-form">
+					<label>Nombres:</label>
+					<input type="text" name="nombres" id="nombres" class="texto textbox" />
+				</div>
+				<div class="elemento-form">
+					<label>Apellidos:</label>
+					<input type="text" name="apellidos" id="apellidos" class="texto textbox" />
+				</div>
+				<div class="elemento-form">
+					<label>Email:</label>
+					<input type="email" name="correo" id="correo" class="texto textbox" />
+				</div>
+				<div class="elemento-form">
+					<label>Asunto</label>
+					<select name="asunto" id="asunto" class="texto comboBox">
+						<option value="0">Seleccione..</option>
+						<option value="1">Reclamo</option>
+						<option value="2">Solicitud</option>
+					</select>
+				</div>
+				<div class="elemento-form">
+					<label>Telefono:</label>
+					<input type="text" name="telefono" id="telefono" class="texto textbox textbox" />
+				</div>
+				<div class="elemento-form">
+					<label>Quiere conocer nuestras instalaciones?</label>
+					<div class="radioButton"><input class="preg" id="Si" type="radio" name="pregunta" value="Si" />Si
+					</div>
+					<div class="radioButton"><input class="preg" id="No" type="radio" name="pregunta" value="No" />No
+					</div>
+				</div>
+				<div class="elemento-form">
+					<label>Mensaje</label> <br>
+					<textarea id="texto" rows="3" class="texto form-control"></textarea>
+				</div>
+				<input type="submit" class="btn btn-warning" value="Enviar">
+				<input type="reset" class="btn btn-primary" value="Cancelar">
+			</form>
 		</div>
-		<iframe
-			src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d127585.11102560056!2d-79.9557809563689!3d-2.140374651150466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smami%20t!5e0!3m2!1ses!2sec!4v1626627577764!5m2!1ses!2sec"
-			width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
-	</section>
+	</div>
 	<footer>
 		<div class="footer-content">
 			<h3>Síguenos en nuestras redes sociales</h3>
@@ -80,8 +112,10 @@
 			<p>copyright &copy;2021 La Parada. Inc</p>
 		</div>
 	</footer>
-	<script src="js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
-	se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
+	<script src="../js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
+		se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
+	<script src="../js/validaciones/validacionesContactenos.js"></script><!--Script encargado de realizar las
+	validaciiones del formulario-->
 </body>
 
 </html>
