--- a/FastFoodApp/html/ofertas.html
+++ b/FastFoodApp/html/ofertas.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
-	<link rel="stylesheet" type="text/css" href="estilos/estilosContactenos.css">
+	<link rel="stylesheet" type="text/css" href="../estilos/estilosOfertas.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
 	<header>
-		<img class="logo" src="img/logo2.png" alt="logo">
+		<img class="logo" src="../img/logo2.png" alt="logo">
 		<div class="redes-encabezado">
 			<ul>
 				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -41,7 +41,7 @@
 		</div>
 		<nav>
 			<ul class="menu_list" id="menu_list">
-				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
+				<li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
 				<li class="list_item"><a href="menu.html" class="link">Menú</a></li>
 				<li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
 				<li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
@@ -52,52 +52,49 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="titulo">
-		<h1>Contáctenos</h1>
-	</div>
-	<div id="contenedorPrincipal">
-		<div class="contenedor-formularios">
-			<form id="formContactenos" onsubmit="return validar()">
-				<div class="elemento-form">
-					<label>Nombres:</label>
-					<input type="text" name="nombres" id="nombres" class="texto textbox" />
-				</div>
-				<div class="elemento-form">
-					<label>Apellidos:</label>
-					<input type="text" name="apellidos" id="apellidos" class="texto textbox" />
-				</div>
-				<div class="elemento-form">
-					<label>Email:</label>
-					<input type="email" name="correo" id="correo" class="texto textbox" />
-				</div>
-				<div class="elemento-form">
-					<label>Asunto</label>
-					<select name="asunto" id="asunto" class="texto comboBox">
-						<option value="0">Seleccione..</option>
-						<option value="1">Reclamo</option>
-						<option value="2">Solicitud</option>
-					</select>
-				</div>
-				<div class="elemento-form">
-					<label>Telefono:</label>
-					<input type="text" name="telefono" id="telefono" class="texto textbox textbox" />
-				</div>
-				<div class="elemento-form">
-					<label>Quiere conocer nuestras instalaciones?</label>
-					<div class="radioButton"><input class="preg" id="Si" type="radio" name="pregunta" value="Si" />Si
-					</div>
-					<div class="radioButton"><input class="preg" id="No" type="radio" name="pregunta" value="No" />No
-					</div>
-				</div>
-				<div class="elemento-form">
-					<label>Mensaje</label> <br>
-					<textarea id="texto" rows="3" class="texto form-control"></textarea>
-				</div>
-				<input type="submit" class="btn btn-warning" value="Enviar">
-				<input type="reset" class="btn btn-primary" value="Cancelar">
-			</form>
+	<section class="ofertas">
+		<h1>Nuestras Ofertas</h1>
+		<div class="contenedor-ofertas" id="primero">
+			<img src="../img/promociones/promo1.jpeg" alt="promo" class="contenedor-imagen">
+			<div class="texto-imagen">
+				<h2>Lunes</h2>
+				<p style="text-shadow: 0 0 3px #b6b5b5">20% de Descuento en Todos los Platos</p>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Jarro de cerveza 0.99 ctvs</p>
+			</div>
 		</div>
-	</div>
+		<div class="contenedor-ofertas" id="segundo">
+			<img src="../img/promociones/promo2.jpeg" alt="promo" class="contenedor-imagen">
+			<div class="texto-imagen">
+				<h2>Martes</h2>
+				<p style="text-shadow: 0 0 3px #b6b5b5">10% en piqueos</p>
+				<p style="text-shadow: 0 0 3px #b6b5b5">2x1 en Cocteles y Mojitos</p>
+			</div>
+		</div>
+		<div class="contenedor-ofertas" id="tercero">
+			<img src="../img/promociones/promo3.jpeg" alt="promo" class="contenedor-imagen">
+			<div class="texto-imagen">
+				<h2>Miércoles</h2>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Alitas 0.50 ctvs c/u</p>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Michelada $1.95</p>
+			</div>
+		</div>
+		<div class="contenedor-ofertas" id="cuarto">
+			<img src="../img/promociones/promo4.jpeg" alt="promo" class="contenedor-imagen">
+			<div class="texto-imagen">
+				<h2>Jueves</h2>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Burguer Bites 20% de Descuento</p>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Jarro de Cerverza 0.99 ctvs</p>
+			</div>
+		</div>
+		<div class="contenedor-ofertas" id="quinto">
+			<img src="../img/promociones/promo5.jpeg" alt="promo" class="contenedor-imagen">
+			<div class="texto-imagen">
+				<h2>Sábado</h2>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Rockin Pops 20% de Descuento</p>
+				<p style="text-shadow: 0 0 3px #b6b5b5">Jarro de Cerverza 0.99 ctvs</p>
+			</div>
+		</div>
+	</section>
 	<footer>
 		<div class="footer-content">
 			<h3>Síguenos en nuestras redes sociales</h3>
@@ -112,10 +109,8 @@
 			<p>copyright &copy;2021 La Parada. Inc</p>
 		</div>
 	</footer>
-	<script src="js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
+	<script src="../js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
 		se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
-	<script src="js/validaciones/validacionesContactenos.js"></script><!--Script encargado de realizar las
-	validaciiones del formulario-->
 </body>
 
 </html>
