--- a/FastFoodApp/html/quienesSomos.html
+++ b/FastFoodApp/html/quienesSomos.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Restaurante" />
     <meta name="keywords" content="El mejor restaurante del país" />
     <title>La Parada</title>
-    <link rel="stylesheet" type="text/css" href="estilos/estilosQuienesSomos.css">
+    <link rel="stylesheet" type="text/css" href="../estilos/estilosQuienesSomos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img class="logo" src="img/logo2.png" alt="logo">
+        <img class="logo" src="../img/logo2.png" alt="logo">
         <div class="redes-encabezado">
             <ul>
                 <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -41,7 +41,7 @@
         </div>
         <nav>
             <ul class="menu_list" id="menu_list">
-                <li class="list_item"><a href="index.html" class="link">Inicio</a></li>
+                <li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
                 <li class="list_item"><a href="menu.html" class="link">Menú</a></li>
                 <li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
                 <li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
@@ -57,7 +57,7 @@
     </h1>
     <section class="contenedor_descripcion">
         <div class="contenedor-sobre_nosotros">
-            <img src="img/quienesSomos/img1.jpg" alt="img" class="contenedor_imagen">
+            <img src="../img/quienesSomos/img1.jpg" alt="img" class="contenedor_imagen">
             <div class="contenido_textos">
                 <h2 class="titulo_contenedor">Elegancia y buena gastronomía</h2>
                 <p>Guayaquil se merecía un restaurante así, distinguido y selecto.</p>
@@ -78,40 +78,40 @@
         <div class="galeria_chefs">
             <div class="contenedor_galeria">
                 <div class="item_galeria">
-                    <img src="img/chefs/img1.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img1.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img2.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img2.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img3.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img3.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img4.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img4.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img5.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img5.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img6.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img6.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img7.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img7.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img8.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img8.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img9.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img9.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img10.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img10.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img11.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img11.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="img/chefs/img12.jpg" alt="" class="img_galeria">
+                    <img src="../img/chefs/img12.jpg" alt="" class="img_galeria">
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
             <p>copyright &copy;2021 La Parada. Inc</p>
         </div>
     </footer>
-    <script src="js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
+    <script src="../js/menu.js"></script><!--Script del menú de naveación para darle el efecto sticky
 		se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
 </body>
 
