--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
-	<link rel="stylesheet" type="text/css" href="estilos/estilosIndex.css">
+	<link rel="stylesheet" type="text/css" href="styles/stylesIndex.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
 	<header>
-		<img class="logo" src="img/logo2.png" alt="logo">
+		<img class="logo" src="images/logo2.png" alt="logo">
 		<div class="redes-encabezado">
 			<ul>
 				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -55,16 +55,16 @@
 	<div class="container_slider">
 		<div class="slider" id="slider">
 			<div class="slider_section">
-				<img src="img/slider/slider1.jpg" alt="img1" class="slider_img">
+				<img src="images/slider/slider1.jpg" alt="img1" class="slider_img">
 			</div>
 			<div class="slider_section">
-				<img src="img/slider/slider2.jpg" alt="img2" class="slider_img">
+				<img src="images/slider/slider2.jpg" alt="img2" class="slider_img">
 			</div>
 			<div class="slider_section">
-				<img src="img/slider/slider3.jpg" alt="img3" class="slider_img">
+				<img src="images/slider/slider3.jpg" alt="img3" class="slider_img">
 			</div>
 			<div class="slider_section">
-				<img src="img/slider/slider4.jpg" alt="img4" class="slider_img">
+				<img src="images/slider/slider4.jpg" alt="img4" class="slider_img">
 			</div>
 		</div>
 		<div class="slider__btn slider__btn--derecha" id="btn_derecha"><i class="fa fa-chevron-right"
@@ -76,7 +76,7 @@
 	<section class="laParada">
 		<h1>Restaurante La Parada</h1>
 		<div class="contenedor-laParada">
-			<img src="img/home/menu.jpg" alt="img1" class="contenedor-imagen">
+			<img src="images/home/menu.jpg" alt="img1" class="contenedor-imagen">
 			<div class="texo-de-imagen">
 				<h2>Menú</h2>
 				<p>"No dejes para mañana lo que puedas comer hoy"</p>
@@ -87,10 +87,10 @@
 				<h2>Postres</h2>
 				<p>"Todo lo que necesitas es amor. Pero un poco de chocolate de vez en cuando no hace daño"</p>
 			</div>
-			<img src="img/home/postres.jpg" alt="img1" class="contenedor-imagen">
+			<img src="images/home/postres.jpg" alt="img1" class="contenedor-imagen">
 		</div>
 		<div class="contenedor-laParada">
-			<img src="img/home/reservaciones.jpg" alt="img1" class="contenedor-imagen">
+			<img src="images/home/reservaciones.jpg" alt="img1" class="contenedor-imagen">
 			<div class="texo-de-imagen">
 				<h2>Reservaciones</h2>
 				<p>"Alegrar corazones por intermedio de nuestra comida es nuestro propósito de vida"</p>
