--- a/FastFoodApp/html/ofertas.html
+++ b/FastFoodApp/html/ofertas.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
-	<link rel="stylesheet" type="text/css" href="../estilos/estilosOfertas.css">
+	<link rel="stylesheet" type="text/css" href="../styles/stylesOfertas.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
 	<header>
-		<img class="logo" src="../img/logo2.png" alt="logo">
+		<img class="logo" src="../images/logo2.png" alt="logo">
 		<div class="redes-encabezado">
 			<ul>
 				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -55,7 +55,7 @@
 	<section class="ofertas">
 		<h1>Nuestras Ofertas</h1>
 		<div class="contenedor-ofertas" id="primero">
-			<img src="../img/promociones/promo1.jpeg" alt="promo" class="contenedor-imagen">
+			<img src="../images/promociones/promo1.jpeg" alt="promo" class="contenedor-imagen">
 			<div class="texto-imagen">
 				<h2>Lunes</h2>
 				<p style="text-shadow: 0 0 3px #b6b5b5">20% de Descuento en Todos los Platos</p>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="contenedor-ofertas" id="segundo">
-			<img src="../img/promociones/promo2.jpeg" alt="promo" class="contenedor-imagen">
+			<img src="../images/promociones/promo2.jpeg" alt="promo" class="contenedor-imagen">
 			<div class="texto-imagen">
 				<h2>Martes</h2>
 				<p style="text-shadow: 0 0 3px #b6b5b5">10% en piqueos</p>
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 		<div class="contenedor-ofertas" id="tercero">
-			<img src="../img/promociones/promo3.jpeg" alt="promo" class="contenedor-imagen">
+			<img src="../images/promociones/promo3.jpeg" alt="promo" class="contenedor-imagen">
 			<div class="texto-imagen">
 				<h2>Miércoles</h2>
 				<p style="text-shadow: 0 0 3px #b6b5b5">Alitas 0.50 ctvs c/u</p>
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<div class="contenedor-ofertas" id="cuarto">
-			<img src="../img/promociones/promo4.jpeg" alt="promo" class="contenedor-imagen">
+			<img src="../images/promociones/promo4.jpeg" alt="promo" class="contenedor-imagen">
 			<div class="texto-imagen">
 				<h2>Jueves</h2>
 				<p style="text-shadow: 0 0 3px #b6b5b5">Burguer Bites 20% de Descuento</p>
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<div class="contenedor-ofertas" id="quinto">
-			<img src="../img/promociones/promo5.jpeg" alt="promo" class="contenedor-imagen">
+			<img src="../images/promociones/promo5.jpeg" alt="promo" class="contenedor-imagen">
 			<div class="texto-imagen">
 				<h2>Sábado</h2>
 				<p style="text-shadow: 0 0 3px #b6b5b5">Rockin Pops 20% de Descuento</p>
