--- a/FastFoodApp/html/quienesSomos.html
+++ b/FastFoodApp/html/quienesSomos.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Restaurante" />
-    <meta name="keywords" content="El mejor restaurante del país" />
+	<meta name="keywords" content="El mejor restaurante del país" />
     <title>La Parada</title>
-    <link rel="stylesheet" type="text/css" href="../estilos/estilosQuienesSomos.css">
+    <link rel="stylesheet" type="text/css" href="../styles/stylesQuienesSomos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/logo2.png" alt="logo">
+        <img class="logo" src="../images/logo2.png" alt="logo">
         <div class="redes-encabezado">
             <ul>
                 <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
@@ -57,7 +57,7 @@
     </h1>
     <section class="contenedor_descripcion">
         <div class="contenedor-sobre_nosotros">
-            <img src="../img/quienesSomos/img1.jpg" alt="img" class="contenedor_imagen">
+            <img src="../images/quienesSomos/img1.jpg" alt="img" class="contenedor_imagen">
             <div class="contenido_textos">
                 <h2 class="titulo_contenedor">Elegancia y buena gastronomía</h2>
                 <p>Guayaquil se merecía un restaurante así, distinguido y selecto.</p>
@@ -78,40 +78,40 @@
         <div class="galeria_chefs">
             <div class="contenedor_galeria">
                 <div class="item_galeria">
-                    <img src="../img/chefs/img1.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img1.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img2.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img2.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img3.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img3.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img4.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img4.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img5.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img5.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img6.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img6.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img7.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img7.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img8.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img8.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img9.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img9.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img10.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img10.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img11.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img11.jpg" alt="" class="img_galeria">
                 </div>
                 <div class="item_galeria">
-                    <img src="../img/chefs/img12.jpg" alt="" class="img_galeria">
+                    <img src="../images/chefs/img12.jpg" alt="" class="img_galeria">
                 </div>
             </div>
         </div>
