--- a/FastFoodApp/html/trabajaConNosotros.html
+++ b/FastFoodApp/html/trabajaConNosotros.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Restaurante" />
-    <meta name="keywords" content="El mejor restaurante del país" />
+	<meta name="keywords" content="El mejor restaurante del país" />
     <title>La Parada</title>
-    <link rel="stylesheet" type="text/css" href="../estilos/estilosTrabajaConNosotros.css">
+    <link rel="stylesheet" type="text/css" href="../styles/stylesTrabajaConNosotros.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/logo2.png" alt="logo">
+        <img class="logo" src="../images/logo2.png" alt="logo">
         <div class="redes-encabezado">
             <ul>
                 <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
