--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -14,6 +14,127 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		body {
+			font-family: 'Source Sans Pro', sans-serif;
+		}
+
+		/* New Header Styles - Similar to reference image */
+		header {
+			position: relative;
+			width: 100%;
+			height: 100vh;
+			background-image: url('images/slider/slider1.jpg');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+
+		header::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0.5);
+			z-index: 1;
+		}
+
+		/* Navigation Menu */
+		nav {
+			position: absolute;
+			top: 30px;
+			width: 100%;
+			z-index: 100;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background: transparent;
+		}
+
+		.menu_list {
+			list-style: none;
+			display: flex;
+			gap: 40px;
+			align-items: center;
+			flex-wrap: wrap;
+			justify-content: center;
+			padding: 20px;
+			background: transparent;
+		}
+
+		.list_item {
+			position: relative;
+		}
+
+		.list_item .link {
+			color: #ffffff;
+			text-decoration: none;
+			font-size: 16px;
+			font-weight: 500;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			transition: all 0.3s ease;
+			padding: 10px 15px;
+			display: block;
+		}
+
+		.list_item .link:hover {
+			color: #EE9B14;
+			transform: translateY(-2px);
+		}
+
+		.list_item .link::after {
+			content: '';
+			position: absolute;
+			bottom: 5px;
+			left: 50%;
+			transform: translateX(-50%);
+			width: 0;
+			height: 2px;
+			background: #EE9B14;
+			transition: width 0.3s ease;
+		}
+
+		.list_item .link:hover::after {
+			width: 80%;
+		}
+
+		/* Header Content */
+		.header-content {
+			position: relative;
+			z-index: 10;
+			text-align: center;
+			color: #ffffff;
+			max-width: 800px;
+			padding: 20px;
+		}
+
+		.header-content h1 {
+			font-family: 'Satisfy', cursive;
+			font-size: 80px;
+			margin-bottom: 20px;
+			color: #ffffff;
+			text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+		}
+
+		.header-content p {
+			font-size: 24px;
+			margin-bottom: 30px;
+			text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+		}
+
+		/* Section Styles */
 		h1 {
 			color: #EE9B14;
 			font-family: 'Satisfy', cursive;
@@ -22,23 +143,30 @@
 			margin-top: 40px;
 			margin-bottom: 80px;
 		}
-		.logo {
-			width: 250px; 
-			height: auto;
+
+		@media (max-width: 768px) {
+			.menu_list {
+				gap: 20px;
+				padding: 15px;
+			}
+
+			.list_item .link {
+				font-size: 14px;
+			}
+
+			.header-content h1 {
+				font-size: 50px;
+			}
+
+			.header-content p {
+				font-size: 18px;
+			}
 		}
 	</style>
 </head>
 
 <body>
 	<header>
-		<img class="logo" src="images/logo2.png" alt="logo">
-		<div class="redes-encabezado">
-			<ul>
-				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-			</ul>
-		</div>
 		<nav>
 			<ul class="menu_list" id="menu_list">
 				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
@@ -51,6 +179,11 @@
 				<li class="list_item"><a href="html/trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
 			</ul>
 		</nav>
+
+		<div class="header-content">
+			<h1>La Parada</h1>
+			<p>Experiencia Gastronómica Única</p>
+		</div>
 	</header>
 	<div class="container_slider">
 		<div class="slider" id="slider">
@@ -67,10 +200,6 @@
 				<img src="images/slider/slider4.jpg" alt="img4" class="slider_img">
 			</div>
 		</div>
-		<div class="slider__btn slider__btn--derecha" id="btn_derecha"><i class="fa fa-chevron-right"
-				aria-hidden="true"></i></div>
-		<div class="slider__btn slider__btn--izquierda" id="btn_izquierda"><i class="fa fa-chevron-left"
-				aria-hidden="true"></i></div>
 	</div>
 	<script src="js/slider.js"></script>
 	<section class="laParada">
@@ -98,14 +227,6 @@
 		</div>
 	</section>
 	<footer>
-		<div class="footer-content">
-			<h3>Síguenos en nuestras redes sociales</h3>
-			<ul class="redes_sociales">
-				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-			</ul>
-		</div>
 		<div class="derechos">
 			<p>reCAPTCHA y Google protegen este sitio</p>
 			<p>copyright &copy;2021 La Parada. Inc</p>
