--- a/FastFoodApp/html/menu.html
+++ b/FastFoodApp/html/menu.html
@@ -7,71 +7,18 @@
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
 	<title>La Parada</title>
+	<link rel="stylesheet" type="text/css" href="../styles/header-menu.css">
 	<link rel="stylesheet" type="text/css" href="../styles/stylesMenu.css">
+	<link rel="stylesheet" type="text/css" href="../styles/login-modal.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<style>
-		.logo {
-			width: 250px; 
-			height: auto;
-		}
-		h1 {
-			color: #EE9B14;
-			font-family: 'Satisfy', cursive;
-			font-size: 80px;
-			text-align: center;
-			margin-top: 120px;
-			margin-bottom: 60px;
-		}
-		     /* Basic modal styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background: rgba(0,0,0,0.6);
-        }
-		        .modal-content {
-            background: #fff;
-            margin: 6% auto;
-            padding: 20px;
-            border-radius: 6px;
-            max-width: 720px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-        }
-        .modal-content img { max-width: 200px; float: left; margin-right: 20px; border-radius:4px; }
-        .modal-content h2 { margin-top: 0; color:#333; }
-        .modal-content p { color:#555; }
-        .modal .close {
-            float: right;
-            font-size: 28px;
-            cursor: pointer;
-            color:#999;
-        }
-		.modal .controls { margin-top: 12px; display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-        .modal input[type="number"]{ width:72px; padding:6px; }
-        .modal textarea{ width:100%; resize:vertical; }
-        .modal button{ background:#EE9B14; border:none; color:#fff; padding:10px 16px; cursor:pointer; border-radius:4px; }
-	</style>
 </head>
 
 <body>
 	<header>
-		<img class="logo" src="../images/logo2.png" alt="logo">
-		<div class="redes-encabezado">
-			<ul>
-				<li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-			</ul>
-		</div>
 		<nav>
 			<ul class="menu_list" id="menu_list">
 				<li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
@@ -82,9 +29,36 @@
 				<li class="list_item"><a href="quienesSomos.html" class="link">Quiénes Somos</a></li>
 				<li class="list_item"><a href="contactenos.html" class="link">Contáctenos</a></li>
 				<li class="list_item"><a href="trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
+				<li class="list_item"><a href="#" class="login-btn" id="loginBtn">Ingresar</a></li>
 			</ul>
 		</nav>
+
+		<div class="header-content">
+			<h1>Nuestro Menú</h1>
+			<p>Sabores que Enamoran</p>
+		</div>
 	</header>
+
+	<!-- Login Modal -->
+	<div id="loginModal" class="login-modal">
+		<div class="login-modal-content">
+			<span class="close-modal" id="closeModal">&times;</span>
+			<h2>Iniciar Sesión</h2>
+			<div class="login-option google-login">
+				<i class="fa fa-google"></i>
+				<span>Continuar con Google</span>
+			</div>
+			<div class="login-option facebook-login">
+				<i class="fa fa-facebook"></i>
+				<span>Continuar con Facebook</span>
+			</div>
+			<div class="login-option email-login">
+				<i class="fa fa-envelope"></i>
+				<span>Continuar con Correo Electrónico</span>
+			</div>
+		</div>
+	</div>
+
 	<div class="contenedor">
 		<h1>Nuestro Menú</h1>
 		<div class="contenedor-platos">
@@ -220,8 +194,7 @@
 		</div>
 	</footer>
 	<script src="../js/menu.js"></script>
-	<!--Script del menú de naveación para darle el efecto sticky
-	se ubica en esta sección para evitar sobrecargar al navegador al momento de cargar la página-->
+	<script src="../js/login-modal.js"></script>
 </body>
 
 </html>
