--- a/FastFoodApp/html/menu.html
+++ b/FastFoodApp/html/menu.html
@@ -37,6 +37,7 @@
 			<h1>Nuestro Menú</h1>
 			<p>Sabores que Enamoran</p>
 		</div>
+		
 	</header>
 
 	<!-- Login Modal -->
@@ -59,6 +60,7 @@
 		</div>
 	</div>
 
+	<br>
 	<div class="contenedor">
 		<h1>Nuestro Menú</h1>
 		<div class="contenedor-platos">
@@ -71,64 +73,64 @@
 			</ul>
 			<div class="lista-platos">
 				<div class="item" data-categoria="Desayunos" data-descripcion="Crujiente de avena con pomelo, yogur natural y semillas">
-					<img src="../images/platos/desayunos/desayuno1.jpg" alt="desayuno1">
-					<a href="#">Crujiente acompañado con pomelo y yogur en vasito</a>
-					<a href="#">$6.50</a>
+					<img src="../images/platos/desayunos/desayuno1.png" alt="desayuno1">
+					<a href="#">Sándwich clásico</a>
+					<a href="#">$3.50</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
 					<img src="../images/platos/desayunos/desayuno2.jpg" alt="desayuno2">
-					<a href="#">Pudding de chía, café y chocolate</a>
-					<a href="#">$7.80</a>
+					<a href="#">Wrap de desayuno</a>
+					<a href="#">$4.00</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
-					<img src="../images/platos/desayunos/desayuno3.jpg" alt="desayuno3">
-					<a href="#">Sándwich de pollo asado con tomates y canónigos</a>
-					<a href="#">$9.90</a>
+					<img src="../images/platos/desayunos/desayuno3.jpeg" alt="desayuno3">
+					<a href="#">Pancakes express</a>
+					<a href="#">$4.50</a>
 				</div>
 				<div class="item" data-categoria="Desayunos">
 					<img src="../images/platos/desayunos/desayuno4.jpg" alt="desayuno4">
-					<a href="#">Tostadas de aguacate, bacalao y espárragos</a>
-					<a href="#">$5.50</a>
+					<a href="#">Bol de yogurt y granola</a>
+					<a href="#">$3.75</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
 					<img src="../images/platos/almuerzos/almuerzo1.jpg" alt="almuerzo1">
-					<a href="#">Ensalada de pollo con cuscús</a>
-					<a href="#">$18.45</a>
+					<a href="#">Hamburguesa doble con papas fritas</a>
+					<a href="#">$6.50</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
 					<img src="../images/platos/almuerzos/almuerzo2.jpg" alt="almuerzo2">
-					<a href="#">Pechugas de pollo a la plancha</a>
-					<a href="#">$16.80</a>
+					<a href="#">Pollo crispy con arroz y ensalada de col</a>
+					<a href="#">$6.00</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
 					<img src="../images/platos/almuerzos/almuerzo3.jpg" alt="almuerzo3">
-					<a href="#">Burritos gluten free con pechuga de pollo</a>
-					<a href="#">$14.90</a>
+					<a href="#">Burrito mixto</a>
+					<a href="#">$5.75</a>
 				</div>
 				<div class="item" data-categoria="Almuerzos">
 					<img src="../images/platos/almuerzos/almuerzo4.jpg" alt="almuerzo4">
-					<a href="#">Atún salteado con verduras y miel</a>
-					<a href="#">$19.99</a>
+					<a href="#">Hot dog americano</a>
+					<a href="#">$4.50</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
 					<img src="../images/platos/meriendas/merienda1.jpg" alt="merienda1">
-					<a href="#">Crema fría de aguacate y limón</a>
-					<a href="#">$14.45</a>
+					<a href="#">Empanaditas mixtas</a>
+					<a href="#">$3.50</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
 					<img src="../images/platos/meriendas/merienda2.jpg" alt="merienda2">
-					<a href="#">Atún en salsa teriyaki y sésamo</a>
-					<a href="#">$18.80</a>
+					<a href="#">Papas fritas con cheddar y tocino</a>
+					<a href="#">$5.50</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
 					<img src="../images/platos/meriendas/merienda3.jpg" alt="merienda3">
-					<a href="#">Crema fría de calabacín con aguacate</a>
-					<a href="#">$15.90</a>
+					<a href="#">Mini hamburguesitas (2 sliders)</a>
+					<a href="#">$6.50</a>
 				</div>
 				<div class="item" data-categoria="Meriendas">
 					<img src="../images/platos/meriendas/merienda4.jpg" alt="merienda4">
-					<a href="#">Ensalada de atún baja en calorías</a>
-					<a href="#">$11.99</a>
+					<a href="#">Panini de jamón y queso</a>
+					<a href="#">$4.00</a>
 				</div>
 				<div class="item" data-categoria="Postres">
 					<img src="../images/platos/postres/postre1.jpg" alt="postre1">
